# metro-bus-tracker

./: .dockerignore  .gitignore  CLAUDE.md  HARDWARE.md  README.md  docker-compose.yml
.github/workflows/: build.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  engine.py  frame.py  icons.py  main.py  ota.py  rotation.py  textdraw.py
backend/app/fonts/: __init__.py
backend/app/preview/: index.html
backend/app/providers/: base.py  bus.py  mock.py  spotify.py  weather.py
backend/app/screens/: base.py  bus.py  clock.py  spotify.py  weather.py
backend/tests/: test_app_integration.py  test_bus_screen.py  test_bus_status.py  test_clock_screen.py  test_config_validation.py  test_engine_cadence.py  test_engine_fallback.py  test_frame_format.py  test_gtfs_parse.py  test_ota.py  test_provider_base.py  test_rotation.py  test_spotify.py  test_spotify_screen.py  test_spotify_wrap.py  test_textdraw_marquee.py  test_textdraw_unicode.py  test_weather.py
docs/superpowers/plans/: 2026-07-18-esp32s3-ota.md
docs/superpowers/specs/: 2026-07-17-esp32s3-ota-design.md
firmware/: partitions.csv  platformio.ini
firmware/include/: pins.h
firmware/src/: main.cpp
scripts/: spotify_auth.py  spotify_devices.py
